--- a/web/static/css/demo.css
+++ b/web/static/css/demo.css
@@ -205,5 +205,72 @@
 	}
 	
 	.demo-border {
-		border:1px solid rgba(0,0,0,.2)
+		border:1px solid rgba(0,0,0,.2);
 	}
+
+
+
+/*KANDU STYLE*/
+
+	.btn-primary-kandu {
+		color:#fff;
+		background: url("/static/img/demo/button_action_primary_sprite.png") repeat-x scroll 0 0 #7e1c45;
+	}
+
+	.btn-primary:hover,.btn-primary:focus,.btn-primary:active,.btn-primary.active,.open .dropdown-toggle.btn-primary {
+		color:#fff;
+		background-color:#296191;
+		border-color:#1f496d;
+	}
+
+	.backgr_kandu {
+		background-image:url("/static/img/demo/login_welcome_ce_bkgd.jpg");
+		background-repeat:no-repeat;
+		background-position:159px 40px;
+		height:360px;
+		width:100%;
+		float:left
+	}
+
+	.label_form_server {
+		font: 400 75px Arial;
+		text-align: center;
+	}
+
+	#login-header-space-kandu {
+		float:right;
+		text-align:right;
+		display:block;
+		vertical-align:middle;
+		color: white;
+		margin-right: 33px;
+	}
+
+	#login #header-kandu {
+		margin:0;
+		height:33px;
+		border-bottom:1px solid #eee!important;
+		overflow:hidden;
+		padding:0 30px;
+		background-clip:padding-box;
+		border-width:0;
+		min-height:28px;
+		background: url("/static/img/demo/banner_bkgd.png") repeat-x scroll 0 0 #707070;
+		margin-bottom:20px;
+	}
+
+	.logo-img { 
+		width: 58px !important; 
+		height: 25px !important; 
+		padding: 0 !important;
+	}
+
+	#logo {
+		margin-top: 4px !important;
+	}
+
+	.txt-color-kandu {
+		color: #8e3259;
+	}
+
+/*KANDU STYLE*/
